# OpenGL

./: .gitignore  CMakeLists.txt  README.md  install.sh
src/: CMakeLists.txt  OpenGL_App.cpp  OpenGL_App.hpp  OpenGL_Camera.cpp  OpenGL_Camera.hpp  OpenGL_Shader.cpp  OpenGL_Shader.hpp  OpenGL_Texture.cpp  OpenGL_Texture.hpp  glad.c  glad.h  main.cpp
